force-app/main/default/objects/AV_FlowActions__mdt/AV_FlowActions__mdt.object-meta.xml
<CustomObject>
    <label>Flow Actions</label>
    <pluralLabel>Flows Actions</pluralLabel>
</CustomObject>