force-app/main/default/objects/AV_FlowActions__mdt/fields/AV_FlowName__c.field-meta.xml
<CustomField>
    <fullName>AV_FlowName__c</fullName>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>