force-app/main/default/objects/AV_FlowActions__mdt/fields/AV_Order__c.field-meta.xml
<CustomField>
    <fullName>AV_Order__c</fullName>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>