force-app/main/default/objects/AV_FlowActions__mdt/fields/AV_Setting__c.field-meta.xml
<CustomField>
    <fullName>AV_Setting__c</fullName>
    <label>Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>