force-app/main/default/objects/AV_FlowActions__mdt/fields/AV_Type__c.field-meta.xml
<CustomField>
    <fullName>AV_Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>